CSS: Potential fix to the not centered container in mobile devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,3 +79,9 @@ h2 {
 .btn-container button:active {
     background-color:  #5C5C5C;
 }
+
+@media only screen and (max-width: 600px) {
+    .container {
+        margin: 20px auto;
+    }
+}
